--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>saju - full-stack developer & product builder</title>
+    <title>saju</title>
     <meta name="description" content="Personal portfolio of Saju - full-stack developer passionate about building clean, efficient, and user-focused applications using React, Node.js, and modern web technologies." />
     <meta name="author" content="Saju" />
 
-    <meta property="og:title" content="saju - full-stack developer & product builder" />
+    <meta property="og:title" content="saju" />
     <meta property="og:description" content="Personal portfolio of Saju - full-stack developer passionate about building clean, efficient, and user-focused applications using React, Node.js, and modern web technologies." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
