Fix favicon configuration and update Vite build settings

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/jpeg" href="/cosmic.jpg" />
+    <link rel="shortcut icon" type="image/jpeg" href="/cosmic.jpg" />
+    <link rel="apple-touch-icon" href="/cosmic.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>saju</title>
     <meta name="description" content="Personal portfolio of Saju - full-stack developer passionate about building clean, efficient, and user-focused applications using React, Node.js, and modern web technologies." />
